grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: renda-fixa
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
