grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: renda-fixa
spec:
  rules:
  - host: grafana.lbarros.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000   # Ajuste aqui para a porta correta do serviço Grafana
